Some more login stuff working, gonna work on the dashboard too

--- a/app/views/camps/_camp_instructors.html.erb
+++ b/app/views/camps/_camp_instructors.html.erb
@@ -7,16 +7,20 @@
       <ul>
         <% @instructors.each do |i| %>
           <li>
-            <%= link_to(camp_instructor_path(id: camp_instructor_id_for(@camp, i)), method: :delete, class: 'remove') do %>
+            <% if can? :destroy, Instructor %>
+              <%= link_to(camp_instructor_path(id: camp_instructor_id_for(@camp, i)), method: :delete, class: 'remove') do %>
               x&nbsp;&nbsp;
+              <% end %>
             <% end %>
             <%= link_to i.proper_name, instructor_path(i) %>
           </li>
         <% end %>
       </ul>
     <% end %>
+    <% if can? :create, Instructor %>
     <div class="card-action">
-    <%= link_to "Add a new instructor", new_camp_instructor_path(camp_id: @camp.id) %>
+      <%= link_to "Add a new instructor", new_camp_instructor_path(camp_id: @camp.id) %>
+    <% end %>
     </div>
   </div>
 </div>
