--- a/app/views/camps/show.html.erb
+++ b/app/views/camps/show.html.erb
@@ -5,6 +5,9 @@
   <div class="col s5">
     <%= render :partial => "camp_instructors"%>
     <%# render :partial => "camp_students"%>
+    <% if can? :create, Registration %>
+      <%= render :partial => "camp_registrations"%>
+    <% end %>
   </div>
 </div>
 <div class="row">
