--- a/app/views/camps/_active_camps.html.erb
+++ b/app/views/camps/_active_camps.html.erb
@@ -23,7 +23,11 @@
         <td><%= camp.time_slot == "am" ? "Morning" : "Afternoon" %></td>
         <td><%= camp.max_students %></td>
         <td><%# camp.max_students - camp.registrations.count %></td>
-        <td><%= link_to 'Edit', edit_camp_path(camp), :class=>"btn waves-effect waves-light blue" %></td>
+        <td>
+          <% if can? :edit, Camp %>
+            <%= link_to 'Edit', edit_camp_path(camp), :class=>"btn waves-effect waves-light blue" %>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
