--- a/app/views/camps/_inactive_camps.html.erb
+++ b/app/views/camps/_inactive_camps.html.erb
@@ -22,7 +22,9 @@
         <td><%= camp.time_slot == "am" ? "Morning" : "Afternoon" %></td>
         <td><%= camp.max_students %></td>
         <td><%#camp.max_students - camp.registrations.count %></td>
-        <td><%= link_to 'Edit', edit_camp_path(camp), :class=>"btn waves-effect waves-light blue" %></td>
+        <% if can? :update, Camp %>
+          <%= link_to 'Edit', edit_camp_path(camp), :class=>"btn waves-effect waves-light blue" %>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
