--- a/app/views/locations/_locations_list.html.erb
+++ b/app/views/locations/_locations_list.html.erb
@@ -20,7 +20,9 @@
           <td><%= link_to location.name, location %></td>
           <td><%= render :partial => "partials/address_info", locals: {location: location} %></td>
           <td><%= location.max_capacity %></td>
-          <td><%= link_to 'Edit', edit_location_path(location), :class=>"btn waves-effect waves-light" %></td>
+          <% if can? :update, Location %>
+            <td><%= link_to 'Edit', edit_location_path(location), :class=>"btn waves-effect waves-light blue" %></td>
+          <% end %>
         </tr>
       <% end %>
     </tbody>
