--- a/app/views/partials/_nav_parent.html.erb
+++ b/app/views/partials/_nav_parent.html.erb
@@ -3,10 +3,14 @@
     &nbsp&nbsp
     <a href="/" class="brand-logo">A&M Chess Camp</a>
     <ul class="right">
+      <li><%= link_to 'My Family', family_path(current_user) %></li>
       <li><%= link_to "Curriculums", curriculums_path %></li>
       <li><%= link_to "Camps", camps_path %></li> 
       <li><%= link_to "Instructors", instructors_path %></li>
       <li><%= link_to "Locations", locations_path %></li>
+      <ul class="right">
+        <li><%= link_to 'Logout', logout_path %></li>
+      </ul>
     </ul>
   </div>
 </nav>
