--- a/app/views/partials/_object_options.html.erb
+++ b/app/views/partials/_object_options.html.erb
@@ -6,12 +6,17 @@
   <% end %>
   &nbsp;&nbsp;
   
-  <%= link_to(eval("edit_#{model_name}_path(object)"), class: 'waves-effect waves-light btn') do %>
-      &nbsp;<%= "Edit #{opt}" %>
+  <% if can? :update, model_name.capitalize %>
+      <%= link_to(eval("edit_#{model_name}_path(object)"), class: 'waves-effect waves-light btn') do %>
+          &nbsp;<%= "Edit #{opt}" %>
+      <% end %>
+      &nbsp;&nbsp;
   <% end %>
-  &nbsp;&nbsp;
+
+  <% if can? :destroy, model_name.capitalize %>
+    <%= link_to(eval("#{model_name}_path(object)"), method: 'delete', data: {confirm: "Are you sure you want to permanently delete #{opt}"}, class: 'waves-effect waves-light btn btn-alert') do %>
+        &nbsp;<%= "Delete #{opt}" %>
+    <% end %>
+  <% end %>  
   
-  <%= link_to(eval("#{model_name}_path(object)"), method: 'delete', data: {confirm: "Are you sure you want to permanently delete #{opt}"}, class: 'waves-effect waves-light btn btn-alert') do %>
-      &nbsp;<%= "Delete #{opt}" %>
-  <% end %>
 </div>
