--- a/app/views/locations/_locations_list.html.erb
+++ b/app/views/locations/_locations_list.html.erb
@@ -21,7 +21,7 @@
           <td><%= render :partial => "partials/address_info", locals: {location: location} %></td>
           <td><%= location.max_capacity %></td>
           <% if can? :update, Location %>
-            <td><%= link_to 'Edit', edit_location_path(location), :class=>"btn waves-effect waves-light blue" %></td>
+            <td><%= link_to 'Edit', edit_location_path(location), :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %></td>
           <% end %>
         </tr>
       <% end %>
