--- a/app/views/partials/_nav_admin.html.erb
+++ b/app/views/partials/_nav_admin.html.erb
@@ -1,5 +1,5 @@
 <nav>
-  <div class="nav-wrapper">
+  <div class="nav-wrapper" style="background: -webkit-linear-gradient(45deg, #FF5252 0%, #6212e2 100%)">
     &nbsp&nbsp
     <a href="/" class="brand-logo">A&M Chess Camp</a>
     <ul class="right">
