--- a/app/views/camps/_active_camps.html.erb
+++ b/app/views/camps/_active_camps.html.erb
@@ -22,10 +22,10 @@
         <td><%= camp.start_date.strftime("%m/%d/%y") %></td>
         <td><%= camp.time_slot == "am" ? "Morning" : "Afternoon" %></td>
         <td><%= camp.max_students %></td>
-        <td><%# camp.max_students - camp.registrations.count %></td>
+        <td><%= camp.max_students - camp.registrations.count %></td>
         <td>
-          <% if can? :edit, Camp %>
-            <%= link_to 'Edit', edit_camp_path(camp), :class=>"btn waves-effect waves-light blue" %>
+          <% if can? :update, Camp %>
+            <%= link_to 'Edit', edit_camp_path(camp), :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %>
           <% end %>
         </td>
       </tr>
