--- a/app/views/camps/_camp_details.html.erb
+++ b/app/views/camps/_camp_details.html.erb
@@ -13,12 +13,12 @@
     <p><strong>Max Enrollment: </strong><%= @camp.max_students %></p>
     <p><strong>Active: </strong><%= @camp.active ? "camp is currently active" : "camp is currently inactive." %></p>
     <p><strong>Camp: </strong>$<%= @camp.cost %>0</p>
-    <p><strong>Slots Remaining: </strong><%# @camp.max_students - @camp.registrations.count %></p>
+    <p><strong>Slots Remaining: </strong><%= @camp.max_students - @camp.registrations.count %></p>
   </div>
   <div class="card-action">
     <% if can? :update, Camp %>
-      <%= link_to 'Edit', edit_camp_path(@camp), :class=>"btn waves-effect waves-light blue" %>
+      <%= link_to 'Edit', edit_camp_path(@camp), :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %>
     <% end %>
-    <%= link_to 'Back', camps_path, :class=>"btn waves-effect waves-light blue" %>
+    <%= link_to 'Back', camps_path, :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %>
   </div>
 </div>
