--- a/app/views/camps/_inactive_camps.html.erb
+++ b/app/views/camps/_inactive_camps.html.erb
@@ -21,9 +21,9 @@
         <td><%= camp.start_date.strftime("%m/%d/%y") %></td>
         <td><%= camp.time_slot == "am" ? "Morning" : "Afternoon" %></td>
         <td><%= camp.max_students %></td>
-        <td><%#camp.max_students - camp.registrations.count %></td>
+        <td><%= camp.max_students - camp.registrations.count %></td>
         <% if can? :update, Camp %>
-          <%= link_to 'Edit', edit_camp_path(camp), :class=>"btn waves-effect waves-light blue" %>
+          <%= link_to 'Edit', edit_camp_path(camp), :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %>
         <% end %>
       </tr>
     <% end %>
