--- a/app/views/families/index.html.erb
+++ b/app/views/families/index.html.erb
@@ -22,7 +22,7 @@
         <td><%= number_to_phone family.phone %></td>
         <td><%= family.students.size %></td>
         <% if can? :update, Family %>
-          <td><%= link_to 'Edit', edit_family_path(family), :class=>"btn waves-effect waves-light blue" %></td>
+          <td><%= link_to 'Edit', edit_family_path(family), :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %></td>
         <% end %>
       </tr>
     <% end %>
@@ -38,4 +38,3 @@
 <% if can? :create, Family %>
   <td><%= link_to 'New family', new_family_path, :class=>"btn waves-effect waves-light blue" %></td>
 <% end %>
-
