--- a/app/views/home/_admin_home.html.erb
+++ b/app/views/home/_admin_home.html.erb
@@ -1,13 +1,92 @@
+<section class="hero is-info welcome is-small">
+    <div class="container-large">
+      <h1 class="title center">
+        Hello, Admin.
+      </h1>
+    </div>
+</section>
+
+<div class="col s12 m7">
+<h2 class="header center">Your Week</h2>
+
+<div class="row">
+  <div class="col s12">
+    <div class="card blue darken-1">
+      <div class="card-content white-text">
+        <span class="card-title">Camps</span>
+          <%= pie_chart Camp.current.alphabetical.group(:curriculum).count %>
+          
+          <table>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Max Capacity</th>
+              <th>Enrolled Students</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+        
+          <tbody>
+            <% for camp in Camp.all do %>
+                <% if camp.start_date <= Date.today && camp.end_date >= Date.today %>
+                  <tr>
+                    <td color="Black"><%= link_to camp.name, camp %></td>
+                    <td><%= camp.max_students %></td>
+                    <td><%= camp.registrations.size %></td>
+                  </tr>
+                <% end %>  
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+      <div class="card-action">
+        <%= link_to 'Manage Camps', camps_path, :class=>"btn waves-effect waves-light blue" %>
+      </div>
+    </div>
+  </div>
+  <div class="col s12">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <span class="card-title">Card Title</span>
+        <p>I am a very simple card. I am good at containing small bits of information.
+        I am convenient because I require little markup to use effectively.</p>
+      </div>
+      <div class="card-action">
+        <a href="#">This is a link</a>
+        <a href="#">This is a link</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
 <div class="row">
     <div class="col">  
         <h2 class="center">A brief history of CASHMONEYPROFIT</h2>
-        <% data = [] %>
-        <% for camp in Camp.all do %>
-        <% data << [camp.curriculum, camp.cost] %>
-        <% end %>
-        <%= pie_chart data %>
+      <%= line_chart Camp.group("date(camps.start_date)").count %>
     </div>
 </div>
+
+
+
+
+<div class="col s12 m7">
+<h2 class="header">This Week's Profit</h2>
+<div class="card horizontal">
+  <div class="card-stacked">
+    <div class="card-content">
+      <h2 class="center"><%= weekly_profit %></h2>
+    </div>
+    <div class="card-action">
+      <%= link_to 'Manage Camps', camps_path, :class=>"btn waves-effect waves-light blue" %>
+    </div>
+  </div>
+</div>
+</div>
+
+
 
 <div class="col s12 m7">
 <h2 class="header">Horizontal Card</h2>
@@ -23,6 +102,8 @@
   </div>
 </div>
 </div>
+
+
         
         
 <div class="col s12 m7">
