--- a/app/views/partials/_index_structure.html.erb
+++ b/app/views/partials/_index_structure.html.erb
@@ -13,7 +13,7 @@
   <br></br>
   <div class="col s3 center">
     <!-- Add a button for new instances of object -->
-    <%= link_to(eval("new_#{model_name}_path"), class: "btn waves-effect waves-light blue") do %>
+    <%= link_to(eval("new_#{model_name}_path"), class: "btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5") do %>
       <!-- <i class="fa fa-plus"></i> -->
       &nbsp;Add a New <%= model_name.capitalize %>
     <% end %>
