--- a/app/views/partials/_nav_instructor.html.erb
+++ b/app/views/partials/_nav_instructor.html.erb
@@ -3,7 +3,7 @@
     &nbsp&nbsp
     <a href="/" class="brand-logo">A&M Chess Camp</a>
     <ul class="right">
-      <li><%= link_to 'My Family', family_path(current_user) %></li>
+      <li><%= link_to 'My Camps', camp_path(current_user) %></li>
       <li><%= link_to "Curriculums", curriculums_path %></li>
       <li><%= link_to "Camps", camps_path %></li> 
       <li><%= link_to "Instructors", instructors_path %></li>
