--- a/app/views/registrations/_other_students.html.erb
+++ b/app/views/registrations/_other_students.html.erb
@@ -2,14 +2,11 @@
   <div class="card-content">
     <span class="card-title">Other Students</span>
     <% if @other_students.empty? %>
-      <p>No other instructors assigned at this time</p>
+      <p>No other students registered at this time</p>
     <% else %>
       <ul>
-        <% if can? :update, Student %>
-          <td><%= link_to 'Edit', edit_curriculum_path(curriculum), :class=>"btn waves-effect waves-light blue" %></td>
-        <% end %>
         <% for student in @other_students %>
-          <li><%= link_to student.proper_name, student_path(student) %></li>
+          <li style="materialize-red-text"><%= link_to student.proper_name, student_path(student) %></li>
         <% end %>
       </ul>
     <% end %>
