--- a/app/views/home/_admin_home.html.erb
+++ b/app/views/home/_admin_home.html.erb
@@ -14,8 +14,7 @@
     <div class="card blue darken-1">
       <div class="card-content white-text">
         <span class="card-title">Camps</span>
-          <%= pie_chart Camp.current.alphabetical.group(:curriculum).count %>
-          
+          <%= pie_chart Curriculum.current.group(:name).count, donut: true, messages: {empty: "No data"} %>
           <table>
           <thead>
             <tr>
@@ -40,20 +39,18 @@
         </table>
       </div>
       <div class="card-action">
-        <%= link_to 'Manage Camps', camps_path, :class=>"btn waves-effect waves-light blue" %>
+        <%= link_to 'Manage Camps', camps_path, :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %>
       </div>
     </div>
   </div>
   <div class="col s12">
     <div class="card blue-grey darken-1">
       <div class="card-content white-text">
-        <span class="card-title">Card Title</span>
-        <p>I am a very simple card. I am good at containing small bits of information.
-        I am convenient because I require little markup to use effectively.</p>
+        <span class="card-title">Instructor's Camps</span>
+        <%= column_chart Instructor.current.group(:first_name, :last_name).count, donut: true, messages: {empty: "No data"} %>
       </div>
       <div class="card-action">
-        <a href="#">This is a link</a>
-        <a href="#">This is a link</a>
+        <%= link_to 'Manage Instructors', instructors_path, :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %>
       </div>
     </div>
   </div>
