--- a/app/assets/stylesheets/overrides.scss
+++ b/app/assets/stylesheets/overrides.scss
@@ -29,3 +29,38 @@
   background-color: #e53935;
   color: #fff;
 }
+
+div.card-container {
+  height: 200px;
+  line-height: 200px;
+  width: 100%;
+  text-align: center;
+  position: relative;
+  padding: 0 24px;
+}
+
+.card-container img.card-cover-img{
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
+span.card-text-container {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: normal;
+  color: #fff;
+  position: relative;
+  z-index: 2;
+  font-size: 2rem;
+}
+
+@media only screen and (min-width: 993px){
+nav a.button-collapse {
+    display: block;
+}
+}
