--- a/app/views/partials/_nav_guest.html.erb
+++ b/app/views/partials/_nav_guest.html.erb
@@ -1,22 +1,18 @@
-<nav>
-  <div class="nav-wrapper-mobile" style="background: -webkit-linear-gradient(45deg, #FF5252 0%, #6212e2 100%)">
-    &nbsp&nbsp
-    <a href="/" class="brand-logo">A&M Chess Camp</a>
-    <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    <ul class="right hide-on-med-and-down">
-      <li><%= link_to "Curriculums", curriculums_path %></li>
-      <li><%= link_to "Camps", camps_path %></li> 
-      <li><%= link_to "Locations", locations_path %></li>
-      <li><%= link_to 'Login', login_path %></li>
-    </ul>
-  </div>
+<nav class="nav">
+    <div class="nav-wrapper" style="background: -webkit-linear-gradient(45deg, #FF5252 0%, #6212e2 100%)">
+        <a href="#" class="brand-logo left">A&M Chess Camp</a>
+        <a href="#" data-activates="mobile-demo" class="button-collapse right"><i class="material-icons">menu</i></a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><%= link_to "Curriculums", curriculums_path %></li>
+          <li><%= link_to "Camps", camps_path %></li> 
+          <li><%= link_to "Locations", locations_path %></li>
+          <li><%= link_to 'Login', login_path %></li>
+        </ul>
+        <ul class="side-nav" id="mobile-demo">
+          <li><%= link_to "Curriculums", curriculums_path %></li>
+          <li><%= link_to "Camps", camps_path %></li> 
+          <li><%= link_to "Locations", locations_path %></li>
+          <li><%= link_to 'Login', login_path %></li>
+        </ul>
+    </div>
 </nav>
-
-
-  <ul class="sidenav" id="mobile-demo">
-    <li><%= link_to "Curriculums", curriculums_path %></li>
-    <li><%= link_to "Camps", camps_path %></li> 
-    <li><%= link_to "Locations", locations_path %></li>
-    <li><%= link_to 'Login', login_path %></li>
-  </ul>
-          
