Jordan fixed it

--- a/app/views/home/_guest_home.html.erb
+++ b/app/views/home/_guest_home.html.erb
@@ -1,3 +1,4 @@
+<script src="particles.min.js"></script>
 <section class="intro">
   <div id="particles-js">
   <div class="centered-title-container"><h1>The Future of Chess Education</h1></div>
