--- a/app/views/home/_admin_home.html.erb
+++ b/app/views/home/_admin_home.html.erb
@@ -9,8 +9,8 @@
 <div class="col s12 m7">
 <h2 class="header center">Your Week</h2>
 
-<div class="row">
-  <div class="col s12">
+
+  <div class="col s10">
     <div class="card blue darken-1">
       <div class="card-content white-text">
         <span class="card-title">Camps</span>
@@ -43,7 +43,7 @@
       </div>
     </div>
   </div>
-  <div class="col s12">
+  <div class="col s4">
     <div class="card blue-grey darken-1">
       <div class="card-content white-text">
         <span class="card-title">Instructor's Camps</span>
@@ -68,7 +68,7 @@
 
 
 
-
+<div class="row">
 <div class="col s12 m7">
 <h2 class="header">This Week's Profit</h2>
 <div class="card horizontal">
@@ -82,7 +82,6 @@
   </div>
 </div>
 </div>
-
 
 
 <div class="col s12 m7">
@@ -134,4 +133,5 @@
   </div>
 </div>
 </div>
-        
+</div>
+</div>
