--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 
     <title>A&M Chess Camp :: <%= controller.controller_name.capitalize %></title>
     <%= stylesheet_link_tag    "application" %>
-    <%#= javascript_include_tag "application" %>
+    <%= javascript_include_tag "application" %>
     <%= stylesheet_link_tag "https://fonts.googleapis.com/icon?family=Material+Icons" %>
     <%= csrf_meta_tags %>
   </head>
