--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,10 +32,10 @@
     </div>
     <footer>
       <div class="center-align" id="footer">
-        <%= render partial: 'partials/footer' %>
+        <%= render partial: 'partials/alt_footer' %>
       </div>
     </footer> 
-    <%= javascript_include_tag "application" %>
+    <%# javascript_include_tag "application" %>
       
       </div>
     </div>
