--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,8 +15,10 @@
     
     <!-- Partials for the topbar and navigation -->
     <%#= render :partial => "partials/topbar" %>
-    <% if logged_in? && ( current_user.role?(:admin) || current_user.role?(:instructor) ) %>
+    <% if logged_in? && ( current_user.role?(:admin)) %>
       <%= render :partial => "partials/nav_admin" %>
+    <% elsif logged_in? && current_user.role?(:instructor) %>
+      <%= render :partial => "partials/nav_instructor" %>    
     <% elsif logged_in? && current_user.role?(:parent) %>
       <%= render :partial => "partials/nav_parent" %>
     <% else %>
@@ -35,7 +37,6 @@
         <%= render partial: 'partials/alt_footer' %>
       </div>
     </footer> 
-    <%# javascript_include_tag "application" %>
       
       </div>
     </div>
