Got instructor stats page going

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -135,6 +135,16 @@
   color: #fafafa;
   background: linear-gradient(50deg, HSLA(205, 62%, 44%, 1), #F62D51);
   width: 100%;
+  border-radius: 12px;
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
   }
 
     
