--- a/app/views/home/_test_home.html.erb
+++ b/app/views/home/_test_home.html.erb
@@ -1,30 +1,38 @@
-<div class="slider">
-  <ul class="slides">
-    <li>
-      <img src="http://www.renegadetribune.com/wp-content/uploads/2017/09/Iceland-Bobby-Fischer-NY110.jpg"> <!-- random image -->
-      <div class="caption center-align">
-        <h3>This is our big Tagline!</h3>
-        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-      </div>
-    </li>
-    <li>
-      <img src="https://ununsplash.imgix.net/photo-1414849424631-8b18529a81ca?q=75&fm=jpg&s=0e993004a2f3704e8f2ad5469315ccb7"> <!-- random image -->
-      <div class="caption left-align">
-        <h3>Left Aligned Caption</h3>
-        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-      </div>
-    </li>
-    <li>
-      <img src="https://ununsplash.imgix.net/uploads/1413259835094dcdeb9d3/6e609595?q=75&fm=jpg&s=6a4fc66161293fc4a43a6ca6f073d1c5"> <!-- random image -->
-      <div class="caption right-align">
-        <h3>Right Aligned Caption</h3>
-        <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
-      </div>
-    </li>
-  </ul>
-</div>
-
-<body>
+  <div class="slider">
+    <ul class="slides">
+      <li>
+        <img src="https://www.artsfon.com/pic/201608/1920x1080/artsfon.com-86024.jpg"> <!-- random image -->
+        <div class="caption center-align">
+          <h3>Chess Excellence</h3>
+          <h5 class="light grey-text text-lighten-3">Meets affordability.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="https://timedotcom.files.wordpress.com/2015/02/karsparov.jpeg"> <!-- random image -->
+        <div class="caption left-align">
+          <h3>Decades of skill</h3>
+          <h5 class="light grey-text text-lighten-3">Abstracted into just weeks.</h5>
+        </div>
+      </li>
+      <li>
+        <img src="https://chess-teacher.com/wp-content/uploads/2017/06/aronian-vs-carlsen-norway-chess-2017.jpg"> <!-- random image -->
+        <div class="caption right-align">
+          <h3>Meet your match</h3>
+          <h5 class="light grey-text text-lighten-3">Compete against skilled opponents</h5>
+        </div>
+      </li>
+      <li>
+        <img src="http://kidchess.com/new/wp-content/uploads/2014/10/galleries-01-1050x630.jpg"> <!-- random image -->
+        <div class="caption center-align">
+          <h3>Grow your skills!</h3>
+          <h5 class="light grey-text text-lighten-3">Hone your craft.</h5>
+        </div>
+      </li>
+    </ul>
+  </div>
+  
+  
+<body class="fullscreen">
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
