--- a/app/views/home/_instructor_home.erb
+++ b/app/views/home/_instructor_home.erb
@@ -1,7 +1,105 @@
-<section class="hero is-info welcome is-small">
-    <div class="container-large">
+<section class="hero is-info welcome is-small" style="background:#f71d65">
+    <div class="container-wide">
       <h1 class="title center">
         <%= "Hello, #{current_user.instructor.proper_name}" %>
       </h1>
     </div>
 </section>
+
+
+<h2 class="header center">My Week</h2>
+<div class="row">
+  <div class="col s6">
+    <div class="card blue darken-1">
+      <div class="card-content white-text">
+        <span class="card-title">Camps</span>
+          <%= pie_chart current_user.instructor.camps.current.group(:name).count, donut: true, messages: {empty: "No current camps"} %>
+      </div>
+      <div class="card-action">
+        <%= link_to 'Manage Camps', camps_path, :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %>
+      </div>
+    </div>
+  </div>
+  <div class="col s6">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <span class="card-title">My Students</span>
+        <%= column_chart current_user.instructor.camps.current.group(:registrations).count, donut: true, messages: {empty: "No data"} %>
+      </div>
+      <div class="card-action">
+        <%= link_to 'Manage Instructors', instructors_path, :class=>"btn waves-effect waves-light gradient-45deg-red-pink mt-2 btn-small z-depth-5" %>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+
+<div class="row">
+<div class="col s12">
+<h2 class="header">This Week's Profit</h2>
+<div class="card horizontal">
+  <div class="card-stacked">
+    <div class="card-content">
+      <h2 class="center"><%= weekly_profit %></h2>
+    </div>
+    <div class="card-action">
+      <%= link_to 'Manage Camps', camps_path, :class=>"btn waves-effect waves-light blue" %>
+    </div>
+  </div>
+</div>
+</div>
+
+
+<div class="col s12 m7">
+<h2 class="header">Horizontal Card</h2>
+<div class="card horizontal">
+  <div class="card-stacked">
+    <div class="card-content">
+      <h2 class="center">A pie chart</h2>
+      <%= pie_chart Curriculum.group(:camp).count %>
+    </div>
+    <div class="card-action">
+      <%= link_to 'Manage Camps', camps_path, :class=>"btn waves-effect waves-light blue" %>
+    </div>
+  </div>
+</div>
+</div>
+
+
+        
+        
+<div class="col s12">
+<h2 class="header">This week</h2>
+<div class="card horizontal">
+  <div class="card-stacked">
+    <div class="card-content">
+      <table>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Max Capacity</th>
+          <th>Enrolled Students</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
+    
+      <tbody>
+        <% for camp in Camp.all do %>
+            <% if camp.start_date <= Date.today && camp.end_date >= Date.today %>
+              <tr>
+                <td ><%= link_to camp.name, camp, {:style=>'color:blue;'}%></td>
+                <td><%= camp.max_students %></td>
+                <td><%= camp.registrations.size %></td>
+              </tr>
+            <% end %>  
+        <% end %>
+      </tbody>
+    </table>
+
+  </div>
+</div>
+</div>
+</div>
+</div>
