--- a/app/views/home/_admin_home.html.erb
+++ b/app/views/home/_admin_home.html.erb
@@ -1,4 +1,4 @@
-<section class="hero is-info welcome is-small">
+<section class="hero is-info welcome is-small" style="background:#39c2ef">
     <div class="container-large">
       <h1 class="title center">
         <%= "Hello, #{current_user.username}" %>
