got the instructor abilities mostly working. can't see other instructors now

--- a/app/views/camps/show.html.erb
+++ b/app/views/camps/show.html.erb
@@ -5,8 +5,8 @@
   <div class="col s5">
     <%= render :partial => "camp_instructors"%>
     <%= render :partial => "camp_students"%>
-    <%# if can? :create, Registration %>
-      <%#= render :partial => "camp_registrations"%>
+    <%# if can? :create, Instructor %>
+      <!--<button v-on:click="switch_modal()">Add Chore</button>-->
     <%# end %>
   </div>
 </div>
