--- a/app/views/families/new.html.erb
+++ b/app/views/families/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New family</h1>
-
-<%= render 'form', family: @family %>
-
-<%= link_to 'Back', families_path %>
+<%= render partial: "partials/form2_structure", locals: {object: @family, 
+                                                        type_of_form: "New Family",
+                                                        fields1: "family_fields",
+                                                        section_2: "User Account",
+                                                        fields2: "user_fields"} %>
