Vue JS is installed and working for camps#show

--- a/app/views/camps/show.html.erb
+++ b/app/views/camps/show.html.erb
@@ -3,7 +3,7 @@
     <%= render :partial => "camp_details" %>
   </div>
   <div class="col s5">
-    <%= render :partial => "camp_instructors"%>
+    <%= render :partial => "vue_camp_instructor"%>
     <%= render :partial => "camp_students"%>
     <%# if can? :create, Instructor %>
       <!--<button v-on:click="switch_modal()">Add Chore</button>-->
