--- a/app/views/families/_user_fields.html.erb
+++ b/app/views/families/_user_fields.html.erb
@@ -1,4 +1,5 @@
 <%= f.input :username, label_html: { class: 'active' } %>
 <%= f.input :email, label_html: { class: 'active' } %>
+<%= f.input :phone, label_html: { class: 'active' } %>
 <%= f.input :password, label_html: { class: 'active' } %>
 <%= f.input :password_confirmation, label_html: { class: 'active' } %>
