Finally got AJAX working, with unique instructors. working on code for students now

--- a/app/assets/stylesheets/overrides.scss
+++ b/app/assets/stylesheets/overrides.scss
@@ -7,6 +7,10 @@
   background-color: #303F9F;
 }
 
+li.no_bullet {
+  list-style-type: none;
+}
+
 /********** CARDS ********/
 .card a {
   color: #e0f7fa;
