--- a/app/views/campsbullshit/show.html.erb
+++ b/app/views/campsbullshit/show.html.erb
@@ -3,13 +3,8 @@
     <%= render :partial => "camp_details" %>
   </div>
   <div class="col s5">
-    <% if can? :read, Instructor %>
-      <%= render :partial => "camp_instructors_vue"%>
-    <% end %> 
-    <%= render :partial => "camp_students"%>
-    <%# if can? :create, Instructor %>
-      <!--<button v-on:click="switch_modal()">Add Chore</button>-->
-    <%# end %>
+    <%= render :partial => "camp_instructors_vue"%>
+    <%# render :partial => "camp_students"%>
   </div>
 </div>
 <div class="row">
