Got ajax working for students, but no list shows up

--- a/app/views/camps/_camp_student_form_template.html.erb
+++ b/app/views/camps/_camp_student_form_template.html.erb
@@ -1,6 +1,6 @@
 <div id="form-template">
 
-  <!-- create an empty camp instructor object to work with -->
+  <!-- create an empty registration object to work with -->
   <% @registration = Registration.new %>
   <!-- now the form template itself -->
   <div class="row">
