--- a/app/views/curriculums/_curriculum_details.html.erb
+++ b/app/views/curriculums/_curriculum_details.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Description:</strong>
-  <%= best_in_place @curriculum, :description, as: :textarea %>
+  <%= best_in_place @curriculum, :description, as: :input %>
 </p>
 
 <p>
