--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,5 +41,6 @@
       </div>
     </div>
     <%= javascript_include_tag "vue_instructors" %>
+    <%= javascript_include_tag "vue_students" %>
   </body>
 </html>
