--- a/app/views/partials/_object_options.html.erb
+++ b/app/views/partials/_object_options.html.erb
@@ -6,7 +6,7 @@
   <% end %>
   &nbsp;&nbsp;
   
-  <% if can? :update, model_name.capitalize %>
+  <% if can? :edit, model_name.capitalize %>
       <%= link_to(eval("edit_#{model_name}_path(object)"), class: 'waves-effect waves-light btn') do %>
           &nbsp;<%= "Edit #{opt}" %>
       <% end %>
