Got credit card visual form working

--- a/app/views/camps/_camp_instructors_vue.html.erb
+++ b/app/views/camps/_camp_instructors_vue.html.erb
@@ -15,7 +15,13 @@
       <div class="card-action">
       <%# link_to "Add a new instructor", "#" %>
       <% if can? :create, CampInstructor %>
-        <%= link_to "Add a new instructor", "#", {%s(v-on:click) => "switch_modal()"} %>
+        <div v-if="modal_open">
+          <%= link_to "Cancel", "#", {%s(v-on:click) => "switch_modal()"} %>
+        </div>
+        <div v-else>
+          <%= link_to "Add a new instructor", "#", {%s(v-on:click) => "switch_modal()"} %>
+        </div>
+        
       <% end %> 
 
       </div>
