--- a/app/views/partials/_nav_admin.html.erb
+++ b/app/views/partials/_nav_admin.html.erb
@@ -7,6 +7,7 @@
           <li><%= link_to "Curriculums", curriculums_path %></li>
           <li><%= link_to "Camps", camps_path %></li> 
           <li><%= link_to "Families", families_path %></li>
+          <li><%= link_to "Students", students_path %></li> 
           <li><%= link_to "Instructors", instructors_path %></li>
           <li><%= link_to "Locations", locations_path %></li>
           <ul class="right">
@@ -17,6 +18,7 @@
           <li><%= link_to "Curriculums", curriculums_path %></li>
           <li><%= link_to "Camps", camps_path %></li> 
           <li><%= link_to "Families", families_path %></li>
+          <li><%= link_to "Students", students_path %></li>
           <li><%= link_to "Instructors", instructors_path %></li>
           <li><%= link_to "Locations", locations_path %></li>
           <li><%= link_to 'Logout', logout_path %></li>
