--- a/app/views/camps/_camp_student_form_template.html.erb
+++ b/app/views/camps/_camp_student_form_template.html.erb
@@ -22,6 +22,11 @@
         <div class="row">
           <div class="form-actions col s8">
             <%= f.button :submit %>
+            <div class="button">
+              <%= link_to "Connect", create_registration_path(foo_param: 'bar_value') %>
+            </div>
+
+            
           </div>
         </div>
       <% end %>
