Got some stuff working on registrations/cart but it's still complete FUCKING HORSE SHIT FUCK THIS FUCKING PHASEgit add .git add .!

--- a/app/views/camps/_camp_student_form_template.html.erb
+++ b/app/views/camps/_camp_student_form_template.html.erb
@@ -3,10 +3,11 @@
   <!-- create an empty registration object to work with -->
   <% @registration = Registration.new %>
   <!-- now the form template itself -->
+  <% @student = nil %> 
   <div class="row">
     <div class="col">
       <h5>New Student:</h5>
-      <%= simple_form_for(@registration) do |f| %>
+      <%= simple_form_for(@registration, url: '/camps/' + @camp.id.to_s + '/students/add', :method => :get ) do |f| %>
         <%= f.error_notification %>
         <div class="row">
           <div class="form-inputs">
@@ -17,20 +18,19 @@
               <%= f.input :student_id, collection: current_user.family.students.at_or_above_rating(@camp.curriculum.min_rating).below_rating(@camp.curriculum.max_rating).alphabetical.to_a, include_blank: true %>
             <% end %>
             <%= f.input :camp_id, as: :hidden, input_html: { value: @camp.id } %>
+            <%= f.input :id, as: :hidden, input_html: { value: @camp.id } %>
+
           </div>
         </div>
         <div class="row">
           <div class="form-actions col s8">
-            <%= f.button :submit %>
-            <div class="button">
-              <%= link_to "Connect", create_registration_path(foo_param: 'bar_value') %>
-            </div>
-
-            
+            <%= f.button :submit, :url => add_to_cart_path, :method => :get  %>
           </div>
         </div>
       <% end %>
     </div>
   </div>
 
+
 </div>
+
