--- a/app/views/students/_siblings_list.html.erb
+++ b/app/views/students/_siblings_list.html.erb
@@ -18,9 +18,13 @@
               <tr>
                 <td><%= link_to student.proper_name, student_path(student) %></td>
                 <td><%= link_to student.registrations.size, student_path(student) %></td>
-                <td>&nbsp;
-                <%= link_to student.camps.upcoming.first.start_date.strftime("%m/%d/%y"), camp_path(student.camps.upcoming.first) %>
-                </td>
+                <% if student.camps.upcoming.size == 0 %>
+                  <td align="justify">N/A</td>
+                <% else %>
+                  <td>&nbsp;
+                  <%= link_to student.camps.upcoming.first.start_date.strftime("%m/%d/%y"), camp_path(student.camps.upcoming.first) %>
+                  </td>
+                <% end %>
               </tr>
               <% end %>
             <% end %>
