GOT THEMOTHAFUCKING CART WORKING

--- a/app/views/carts/index.html.erb
+++ b/app/views/carts/index.html.erb
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+    
     <title>Card &ndash; the better way to collect credit cards</title>
     <meta name="viewport" content="initial-scale=1">
     <!-- CSS is included through the card.js script -->
 </head>
 <body>
+    <%= @total_price %>
     <style>
         .demo-container {
             width: 100%;
