Got bip working on curriculums and locations

--- a/app/views/curriculums/_curriculum_details.html.erb
+++ b/app/views/curriculums/_curriculum_details.html.erb
@@ -2,7 +2,8 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @curriculum.name %>
+  <%= best_in_place @curriculum, :name, as: :input %>
+  <%# @curriculum.name %>
 </p>
 
 <p>
