--- a/app/views/locations/_location_details.html.erb
+++ b/app/views/locations/_location_details.html.erb
@@ -6,7 +6,8 @@
 
 <p>
   <strong>Maximum Capacity:</strong>
-  <%= @location.max_capacity %>
+  <%# @location.max_capacity %>
+  <%= best_in_place @location, :max_capacity, as: :input %>
 </p>
 
 <p>
