--- a/app/views/partials/_address_info.html.erb
+++ b/app/views/partials/_address_info.html.erb
@@ -1,7 +1,19 @@
-<%= location.street_1 %><br />
-<%= best_in_place @location, :street_1, as: :input %>
-<% unless location.street_2.blank? %>
-	<%= location.street_2 %><br />
-	<%= best_in_place @location, :street_2, as: :input %>
+<% if ! current_user.nil? && current_user.role == "admin" %>
+    <%= best_in_place location, :street_1, as: :input %><br />
+    <% unless location.street_2.blank? %>
+    	<%= best_in_place location, :street_2, as: :input %><br />
+    <% end %>
+    <%= best_in_place location, :city, as: :input %>, <%= best_in_place location, :state, as: :input %>, <%= best_in_place location, :zip, as: :input %>
+
+   
+
+
+<% else %>
+
+    <%= location.street_1 %><br />
+    <% unless location.street_2.blank? %>
+    	<%= location.street_2 %><br />
+    <% end %>
+    <%= location.city %>, <%= location.state %> <%= location.zip %>
+
 <% end %>
-<%= location.city %>, <%= location.state %> <%= location.zip %>
